# stereo-geometry-measurement

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
notebooks/3d_reconstruction/: 3D Reconstruction.ipynb  3d_reconstruction_Denis.ipynb  3d_reconstruction_Timur.ipynb
notebooks/3d_reconstruction/data/training/calibration/: calibration_data_synthetic.json  cam_params.txt
notebooks/calibration/: calibration_real.ipynb  calibration_synthetic.ipynb
notebooks/calibration/calibration_params/: calib_params_real.json  markers_coords.json
notebooks/feature_detection/: README.md  feature_detection.ipynb  orb_sift_detectors.py  superpoint_detector.py
scripts/: render.sh
src/MyAppForCase11/: main.py
src/MyAppForCase11/static/: script.js  style.css
src/MyAppForCase11/templates/: index.html
src/baseline/: feature_detector.py  test.ipynb
src/feature_detection/: orb_sift_detectors.py  test.ipynb
src/pixelpoint/: coords.py  main.py  matching.py  render.py  utils.py
src/pixelpoint/calibration/: README.md  __init__.py  calibrate_calculation.py  calibrate_chessboard.py  calibrate_markers.py  calibration_utils.py  render_chessboard.py
src/pixelpoint/feature_detection/: README.md  __init__.py  orb_sift_detectors.py  superpoint_detector.py
src/pixelpoint/static/: script.js  style.css
src/pixelpoint/templates/: index.html
